--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -1,4 +1,5 @@
 @use '@/styles/lib/mixins.scss';
+@use '@/styles/lib/tokens/animations.scss';
 
 // AutoComplete.module.scss
 .autoCompleteContainer {
@@ -48,16 +49,7 @@
     }
   }
 
-  transform: translateY(-8px);
-  opacity: 0;
-  transition:
-    opacity 0.2s ease,
-    transform 0.1s ease,
-    height 0.2s ease;
-  &.open {
-    transform: translate(0);
-    opacity: 1;
-  }
+  @include animations.slide-animation('top');
 }
 
 .wd-autocomplete {
