--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -1,3 +1,4 @@
+@use '@/styles/lib/tokens/animations.scss';
 @use '@/styles/lib/mixins.scss';
 
 .root {
@@ -24,16 +25,7 @@
     border: 1px solid var(--color-gray-a6);
     box-shadow: var(--shadow-theme);
 
-    transform: translateY(-8px);
-    opacity: 0;
-    transition:
-      opacity 0.2s ease,
-      transform 0.1s ease;
-
-    &.open {
-      transform: translateY(0);
-      opacity: 1;
-    }
+    @include animations.slide-animation('bottom');
   }
 
   .item {
