--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -16,9 +16,9 @@
   position: absolute;
   background-color: var(--color-panel);
   color: var(--color-gray-12);
-  z-index: 0;
+  z-index: 99;
   border-radius: var(--radius-4);
-  border: 1px solid var(--color-gray-a6);
+  border: 1px solid var(--color-border);
   box-shadow: var(--shadow-theme);
 
   text-overflow: ellipsis;
