--- a/src/components/Callout/Callout.module.scss
+++ b/src/components/Callout/Callout.module.scss
@@ -21,7 +21,7 @@
 
   &--ghost {
     color: var(--color-accent-11);
-    // border: 1px solid var(--color-accent-a6);
+    // border: 1px solid var(--color-border-accent);
     background-color: var(--color-accent-4);
 
     &.highContrast {
@@ -33,11 +33,11 @@
   &--outlined {
     background-color: transparent;
     color: var(--color-accent-11);
-    border: 1px solid var(--color-accent-a6);
+    border: 1px solid var(--color-border-accent);
     &.highContrast {
       background-color: transparent;
       color: var(--color-accent-12);
-      border: 1px solid var(--color-accent-a10);
+      border: 1px solid var(--color-border-accent-highContrast);
     }
   }
   &--translucent {
