--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -50,11 +50,11 @@
     &.active {
       background-color: transparent;
       color: var(--color-accent-11);
-      border: 1px solid var(--color-accent-a6);
+      border: 1px solid var(--color-border-accent);
 
       &.highContrast {
         color: var(--color-accent-12);
-        border: 1px solid var(--color-accent-a10);
+        border: 1px solid var(--color-border-accent-highContrast);
         &:hover {
           background-color: var(--color-accent-a3);
           border-color: var(--color-accent-a11);
