--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -22,7 +22,7 @@
     z-index: 99;
     border-radius: max(var(--radius-4, --radius-full));
     background-color: var(--color-panel);
-    border: 1px solid var(--color-gray-a6);
+    border: 1px solid var(--color-border);
     box-shadow: var(--shadow-theme);
 
     @include animations.slide-animation('bottom');
@@ -114,7 +114,7 @@
     .trigger {
       background-color: transparent;
       color: var(--color-accent-12);
-      border: 1px solid var(--color-accent-a6);
+      border: 1px solid var(--color-border-accent);
       &:hover {
         background-color: var(--color-accent-a2);
         border-color: var(--color-accent-a7);
@@ -128,7 +128,7 @@
       &.highContrast {
         background-color: transparent;
         color: var(--color-accent-12);
-        border: 1px solid var(--color-accent-a10);
+        border: 1px solid var(--color-border-accent-highContrast);
         &:hover {
           background-color: var(--color-accent-a3);
           border-color: var(--color-accent-a11);
