--- a/src/components/Upload/Upload.module.scss
+++ b/src/components/Upload/Upload.module.scss
@@ -23,7 +23,7 @@
   width: 100%;
   line-height: 28px;
   box-sizing: border-box;
-  border: 1px solid var(--color-accent-a6);
+  border: 1px solid var(--color-border-accent);
   border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
   background-color: transparent;
@@ -42,7 +42,7 @@
   }
 
   &--ghost {
-    border: 1px solid var(--color-accent-a6);
+    border: 1px solid var(--color-border-accent);
     background-color: var(--color-surface-accent);
     &:focus,
     &:hover {
@@ -83,7 +83,7 @@
 }
 
 .input[data-has-value='true']:invalid {
-  border: 1px solid var(--color-red-9);
+  border: 1px solid var(--color-border-error);
   background-color: var(--color-red-surface);
   margin-bottom: 0;
 }
