--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -31,13 +31,13 @@
 
   &--solid {
     background-color: var(--color-panel);
-    border-bottom: 1px solid var(--color-gray-a6);
+    border-bottom: var(--border-width) solid var(--color-gray-a6);
   }
   &--translucent {
     background-color: rgba(0, 0, 0, 0);
     backdrop-filter: var(--translucent);
     -webkit-backdrop-filter: var(--translucent);
-    border-bottom: 1px solid var(--color-gray-a6);
+    border-bottom: var(--border-width) solid var(--color-gray-a6);
   }
   &--transparent {
     background-color: transparent;
