--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -18,7 +18,7 @@
   color: var(--color-gray-12);
   z-index: 99;
   border-radius: var(--radius-4);
-  border: 1px solid var(--color-border);
+  border: var(--border-width) solid var(--color-border);
   box-shadow: var(--shadow-theme);
 
   text-overflow: ellipsis;
