--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -33,11 +33,11 @@
 .badge--outlined {
   background-color: transparent;
   color: var(--color-accent-11);
-  border: 1px solid var(--color-border-accent);
+  border: var(--border-width) solid var(--color-border-accent);
 
   &.highContrast {
     background-color: transparent;
     color: var(--color-accent-12);
-    border: 1px solid var(--color-border-accent-highContrast);
+    border: var(--border-width) solid var(--color-border-accent-highContrast);
   }
 }
