--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -54,7 +54,7 @@
     gap: var(--space-2);
 
     &--outlined {
-      border-bottom: 1px solid var(--color-gray-a6);
+      border-bottom: var(--border-width) solid var(--color-gray-a6);
     }
 
     .title {
@@ -89,12 +89,12 @@
     flex-direction: row;
     gap: var(--space-4);
     &--outlined {
-      border-top: 1px solid var(--color-gray-a6);
+      border-top: var(--border-width) solid var(--color-gray-a6);
     }
   }
 
   &--outlined {
-    border: 1px solid var(--color-border);
+    border: var(--border-width) solid var(--color-border);
   }
 }
 
