--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -38,14 +38,14 @@
   &--checked {
     .checkmark {
       transition: background-color 0.2s;
-      box-shadow: inset 0 0 0 1px var(--color-accent-9);
+      box-shadow: inset 0 0 0 var(--border-width) var(--color-accent-9);
       // ... and any other styles you want when the custom checkbox is checked
     }
 
     &.highContrast {
       .checkmark {
         transition: background-color 0.2s;
-        box-shadow: inset 0 0 0 1px var(--color-accent-12);
+        box-shadow: inset 0 0 0 var(--border-width) var(--color-accent-12);
         // ... and any other styles you want when the custom checkbox is checked
       }
     }
@@ -91,7 +91,7 @@
   box-sizing: border-box;
 
   background-color: transparent;
-  box-shadow: inset 0 0 0 1px var(--color-gray-a7);
+  box-shadow: inset 0 0 0 var(--border-width) var(--color-gray-a7);
   border-radius: max(var(--radius-3), var(--radius-full));
   transition: background-color 0.2s;
 }
