--- a/src/components/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/DropdownMenu/DropdownMenu.module.scss
@@ -32,7 +32,7 @@
   color: var(--color-gray-12);
   z-index: 99;
   border-radius: var(--radius-4);
-  border: 1px solid var(--color-border);
+  border: var(--border-width) solid var(--color-border);
   box-shadow: var(--shadow-theme);
   min-width: 200px;
 }
@@ -85,7 +85,7 @@
 
 .subContent {
   position: absolute;
-  border: 1px solid var(--color-border);
+  border: var(--border-width) solid var(--color-border);
   left: calc(100% + var(--space-2));
   top: calc(var(--space-1) * -1);
   box-shadow: var(--shadow-theme);
