--- a/src/components/ExpansionPanel/ExpansionPanel.module.scss
+++ b/src/components/ExpansionPanel/ExpansionPanel.module.scss
@@ -5,14 +5,14 @@
   overflow: hidden;
 
   &.outlined {
-    border: 1px solid var(--color-border-accent);
+    border: var(--border-width) solid var(--color-border-accent);
   }
 }
 
 .item {
   &:not(:last-child) {
     &.outlined {
-      border-bottom: 1px solid var(--color-accent-a6);
+      border-bottom: var(--border-width) solid var(--color-accent-a6);
     }
   }
 }
@@ -42,7 +42,7 @@
   &.expanded {
     margin-top: 0;
     &.outlined {
-      border-top: 1px solid var(--color-accent-a6);
+      border-top: var(--border-width) solid var(--color-accent-a6);
     }
   }
 }
