--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -28,7 +28,7 @@
   &--outlined {
     background-color: transparent;
     color: var(--color-accent-11);
-    border: 1px solid var(--color-border-accent);
+    border: var(--border-width) solid var(--color-border-accent);
   }
   &--translucent {
     color: var(--color-accent-12);
