--- a/src/components/Tree/Tree.module.scss
+++ b/src/components/Tree/Tree.module.scss
@@ -103,7 +103,7 @@
 }
 
 .dragLine {
-  height: 2px;
+  height: var(--border-width);
   background-color: var(--color-accent-12); // Or any indicator color
   position: absolute;
   width: 100%;
@@ -112,10 +112,10 @@
 
 .dragLineAbove {
   top: 0;
-  margin-top: -1px;
+  margin-top: calc(var(--border-width) * -1);
 }
 
 .dragLineBelow {
   bottom: 0;
-  margin-bottom: -1px;
+  margin-bottom: calc(var(--border-width) * -1);
 }
