--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -38,6 +38,10 @@
     &:focus,
     &:hover {
       border-color: var(--color-accent-9);
+
+      &.highContrast {
+        border-color: var(--color-accent-12);
+      }
     }
   }
 
@@ -49,6 +53,10 @@
       outline: none;
       border-color: var(--color-accent-9);
       background-color: var(--color-surface-accent);
+
+      &.highContrast {
+        border-color: var(--color-accent-12);
+      }
     }
   }
 
@@ -58,6 +66,10 @@
       outline: none;
       background-color: transparent;
       border-color: var(--color-accent-9);
+
+      &.highContrast {
+        border-color: var(--color-accent-12);
+      }
     }
   }
 
