layout options added

--- a/src/styles/lib/utils/height.scss
+++ b/src/styles/lib/utils/height.scss
@@ -27,5 +27,12 @@
     &-100\% {
       height: 100%;
     }
+
+    &-50vh {
+      height: 50vh;
+    }
+    &-100vh {
+      height: 100vh;
+    }
   }
 }
