--- a/src/styles/lib/utils/max-width.scss
+++ b/src/styles/lib/utils/max-width.scss
@@ -27,5 +27,12 @@
     &-100\% {
       max-width: 100%;
     }
+
+    &-50vw {
+      max-width: 50vw;
+    }
+    &-100vw {
+      max-width: 100vw;
+    }
   }
 }
