--- a/src/styles/lib/utils/width.scss
+++ b/src/styles/lib/utils/width.scss
@@ -27,5 +27,12 @@
     &-100\% {
       width: 100%;
     }
+
+    &-50vw {
+      width: 50vw;
+    }
+    &-100vw {
+      width: 100vw;
+    }
   }
 }
