--- a/src/styles/lib/utils/utils.scss
+++ b/src/styles/lib/utils/utils.scss
@@ -17,5 +17,6 @@
 @import './max-width.scss';
 @import './min-width.scss';
 @import './height.scss';
+@import './inset.scss';
 @import './max-height.scss';
 @import './min-height.scss';
