--- a/src/components/SplitPane/SplitPanel.module.scss
+++ b/src/components/SplitPane/SplitPanel.module.scss
@@ -1,3 +1,26 @@
+@use '@/styles/lib/functions';
+
+// Define SCSS variables for repeated values
+$border-width: 5px;
+$resize-handle-size: 11px;
+$resize-handle-margin: -5px;
+$transition-duration: 0.2s;
+$transition-effect: ease;
+
+// Mixin for box sizing
+@mixin box-sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+// Mixin for background clip
+@mixin background-clip {
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding;
+  background-clip: padding-box;
+}
+
 .container {
   position: relative;
   width: 100%;
@@ -15,51 +38,61 @@
   position: absolute;
   background: var(--color-border);
   z-index: 1;
-
   user-select: none;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding;
-  background-clip: padding-box;
+  @include box-sizing;
+  @include background-clip;
+
   &:hover {
-    -webkit-transition: all 2s ease;
-    transition: all 2s ease;
+    transition: all $transition-duration $transition-effect;
   }
 
-  &:active {
-    background: var(--color-accent-9);
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding;
-    background-clip: padding-box;
-  }
   &[data-split='horizontal'] {
-    height: 11px;
-    margin: -5px 0;
-    border-top: 5px solid rgba(255, 255, 255, 0);
-    border-bottom: 5px solid rgba(255, 255, 255, 0);
-    cursor: row-resize;
+    height: $resize-handle-size;
     width: 100%;
-    :hover {
-      border-top: 5px solid rgba(0, 0, 0, 0.1);
-      border-bottom: 5px solid rgba(0, 0, 0, 0.1);
+    margin: $resize-handle-margin 0;
+    border-top: $border-width solid functions.opacity(var(--color-accent-9), 100%);
+    border-bottom: $border-width solid functions.opacity(var(--color-accent-9), 100%);
+
+    &:not(.disabled) {
+      cursor: row-resize;
+      &:hover,
+      &:active {
+        border-top: $border-width solid functions.opacity(var(--color-border), 50%);
+        border-bottom: $border-width solid functions.opacity(var(--color-border), 50%);
+      }
+
+      &:active {
+        background: var(--color-accent-9);
+        border-top: $border-width solid functions.opacity(var(--color-accent-9), 70%);
+        border-bottom: $border-width solid functions.opacity(var(--color-accent-9), 70%);
+        @include box-sizing;
+        @include background-clip;
+      }
     }
   }
-  &[data-split='vertical'] {
-    width: 11px;
-    height: 100%;
-    margin: 0 -5px;
-    border-left: 5px solid rgba(255, 255, 255, 0);
-    border-right: 5px solid rgba(255, 255, 255, 0);
-    cursor: col-resize;
 
-    &:hover {
-      border-left: 5px solid rgba(0, 0, 0, 0.1);
-      border-right: 5px solid rgba(0, 0, 0, 0.1);
+  &[data-split='vertical'] {
+    width: $resize-handle-size;
+    height: 100%;
+    margin: 0 $resize-handle-margin;
+    border-left: $border-width solid functions.opacity(var(--color-accent-9), 100%);
+    border-right: $border-width solid functions.opacity(var(--color-accent-9), 100%);
+
+    &:not(.disabled) {
+      &:hover,
+      &:active {
+        cursor: col-resize;
+        border-left: $border-width solid functions.opacity(var(--color-border), 50%);
+        border-right: $border-width solid functions.opacity(var(--color-border), 50%);
+      }
+
+      &:active {
+        background: var(--color-accent-9);
+        border-left: $border-width solid functions.opacity(var(--color-accent-9), 70%);
+        border-right: $border-width solid functions.opacity(var(--color-accent-9), 70%);
+        @include box-sizing;
+        @include background-clip;
+      }
     }
   }
 }
